<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:autofillHints="" />
    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:autofillHints="" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendOnChannel1"
        android:text="@string/big_picture_style" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendOnChannel2"
        android:text="@string/bigtext_style" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendOnChannel3"
        android:text="@string/media_player_notification" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendOnChannel4"
        android:text="@string/progressbar" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendOnChannel5"
        android:text="@string/groupingofmessages" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendOnChannel6"
        android:text="Show Custom notification" />



</LinearLayout>